<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.phrase.MainActivity">

    <LinearLayout
        android:id="@+id/linear_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_all"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_all"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/image_happy"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_happy"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/image_morning"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_morning"
            app:tint="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/seu_nome"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_frase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="16dp"
        android:text="@string/frase"
        android:textAlignment="center"
        android:textSize="22sp" />

    <View
        android:id="@+id/view_end"
        android:layout_width="128dp"
        android:layout_height="3dp"
        android:layout_below="@id/text_frase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent" />

    <Button
        android:id="@+id/button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_button"
        android:padding="16dp"
        android:text="@string/nova_frase"
        android:textColor="@color/white"/>

</RelativeLayout>